# Tinymovr

./: .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  ARCHITECTURE.md  AVLOS_GUIDE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  PAC5527_NOTES.md  README.md  SAFETY.md  STRUCTURE.md  TESTING.md  avlos_config.yaml
docs/: LICENSE.txt  conf.py  index.rst  quickstart.rst  (+2 more)
studio/Python/: .gitignore  Manifest.in  README.md  pyproject.toml  setup.py  test_deployment.sh  tox.ini
studio/Python/scripts/: test_bootloader.py
studio/Python/test/: can_reliability.py  random_walk.py  test_getters.py  test_setters.py  test_simulation.py
studio/Python/tests/: __init__.py  sim_bus.py  test_amt22.py  test_as5047.py  test_base_function.py  test_board.py  test_board_config.py  test_bootloader.py  test_dfu.py  test_hall.py  test_homing.py  test_nvm.py  test_rates.py  test_simulation.py  test_simulation_legacy_errors.py  test_traj_planner.py  test_watchdog.py  tm_test_case.py
studio/Python/tinymovr/: __init__.py  avlos_config.yaml  bus_manager.py  bus_router.py  channel.py  cli.py  config.py  constants.py  device.yaml  device_discovery.py  dfu.py  discovery.py  endpoints.py  errors.py  gui.py  isotp_channel.py  shell.py  sim_bus.py  singleton.py  tee.py  tinymovr.py  units.py  user_wrapper.py
studio/Python/tinymovr/attr_object/: __init__.py  attr_object.py
studio/Python/tinymovr/bus/: __init__.py  arduino_can.py  insilico.py  slcan_ours.py  test.py
studio/Python/tinymovr/codec/: __init__.py  codec.py
studio/Python/tinymovr/config/: __init__.py  avlos_config.yaml  bl.yaml  config.py  device.yaml
studio/Python/tinymovr/gui/: __init__.py  gui.py  helpers.py  widgets.py  window.py  worker.py
studio/Python/tinymovr/iface/: __init__.py  can.py  codec.py  iface.py
studio/Python/tinymovr/iface/can/: __init__.py  can.py  endpoints.py
studio/Python/tinymovr/iface/can_bus/: __init__.py  can_bus.py  endpoints.py
studio/Python/tinymovr/objdict/: __init__.py  objdict.py
studio/Python/tinymovr/plotter/: __init__.py  plotter.py
studio/Python/tinymovr/presenter/: __init__.py  dict_obj.py  presenters.py  state_obj.py
studio/Python/tinymovr/singleton/: __init__.py  singleton.py
studio/Python/tinymovr/specs/: dfu.yaml  dfu_1_1_x.yaml  tinymovr_1_3_x.yaml  tinymovr_1_4_x.yaml  tinymovr_1_6_x.yaml  tinymovr_1_7_x.yaml  tinymovr_2_0_x.yaml  tinymovr_2_1_x.yaml  tinymovr_2_3_x.yaml  tinymovr_2_4_x.yaml
(+259 files in other folders)
